(DB1 START) Frontend calculadora para Nuvem

--- a/calculadora-frontend/src/app/app.component.html
+++ b/calculadora-frontend/src/app/app.component.html
@@ -25,10 +25,8 @@
     <button style="background: lightgrey" (click)="onClickExercutarOperacao()" >Executar</button>
   </div>
 
-  numeroUm: {{numeroUm}} - numeroDois: {{numeroDois}} - operacao: {{operacao}}
-
   <div>
-    <h2 style="background: lightgreen">Resultado: {{response.resultadoOperacao}}</h2>
+    <h2>Resultado: {{response.resultadoOperacao}}</h2>
   </div>
 </div>
 
